--- a/ShelterEvidency/Views/EvidencyCardView.xaml
+++ b/ShelterEvidency/Views/EvidencyCardView.xaml
@@ -4,30 +4,40 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              Background="{DynamicResource MaterialDesignPaper}"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="25*"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button x:Name="BasicInfo" Content="Základní informace" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="Stays"  Content="Pobyty" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="MedicalInfo" Content="Zdravotní informace" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="Costs" Content="Náklady" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="Incidents" Content="Incidenty" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="Walks" Content="Venčení" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="People" Content="Navázané osoby" Margin="2,0,0,0" Padding="2,0"/>
-            <Button x:Name="Documents" Content="Dokumenty" Margin="2,0,0,0" Padding="2,0"/>
+             d:DesignHeight="450" d:DesignWidth="1200">
+    <DockPanel>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="BasicInfo" Grid.Column="0" Content="Základní informace" Margin="5,2,5,-3"/>
+            <Button x:Name="Stays" Grid.Column="1"  Content="Pobyty" Margin="5,2,5,-3" />
+            <Button x:Name="MedicalInfo" Grid.Column="2" Content="Zdravotní informace" Margin="5,2,5,-3" />
+            <Button x:Name="Costs" Grid.Column="3" Content="Náklady" Margin="5,2,5,-3"/>
+            <Button x:Name="Incidents" Grid.Column="4" Content="Incidenty" Margin="5,2,5,-3"/>
+            <Button x:Name="Walks" Grid.Column="5" Content="Venčení" Margin="5,2,5,-3"/>
+            <Button x:Name="People" Grid.Column="6" Content="Navázané osoby"  Margin="5,2,5,-3"/>
+            <Button x:Name="Documents" Grid.Column="7" Content="Dokumenty" Margin="5,2,5,-3"/>
 
-        </StackPanel>
+        </Grid>
 
-        <ContentControl x:Name="ActiveItem" Grid.Row="1"/>
+        <materialDesign:Card
+            materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="5,0" >
+            <ContentControl x:Name="ActiveItem"/>
+            </materialDesign:Card>
 
 
-    </Grid>
+    </DockPanel>
 </UserControl>
